<resources>
    <string name="app_name">timealarm</string>
    <string name="no_cardetails">Click on the button below to begin creating your reminder!</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>

    <string name="add_reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>

    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>

    <string name="editor_activity_title_new_reminder">Add Reminder Details</string>
    <string name="editor_activity_title_edit_reminder">Edit Reminder</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Reminder?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>
    <string name="editor_delete_reminder_successful">Reminder deleted</string>

    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>

    <string name="editor_insert_reminder_successful">Reminder saved</string>

    <string name="editor_insert_reminder_failed">Error with saving reminder</string>

    <string name="editor_update_reminder_successful">Reminder updated</string>

    <string name="editor_update_reminder_failed">Error with updating reminder</string>

    <string name="reminder_title">AlarmReminder</string>





    //locatiom
    <string name="add_new_location">Add new location</string>
    <string name="location_list">Locations</string>
    <string name="need_location_permission_message">You need to enable location permissions first</string>
    <string name="location_permissions_granted_message">Location Permissions Granted</string>
    <string name="setting_enabled" translatable="false">EnabledSetting</string>
    <string name="settings_label">Settings</string>
    <string name="location_permissions">Location Permissions</string>
    <string name="enable_geofences">Enable Geofences</string>
    <string name="privacy">http://www.google.com/policies/privacy</string>
    <string name="ringer_permissions">Ringer Permissions</string>
    <string name="silent_mode_activated">Silent mode activated</string>
    <string name="touch_to_relaunch">Touch to launch the app.</string>
    <string name="back_to_normal">Back to normal</string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>


    //theme
    <string name="app_import">Import</string>
    <string name="app_gallery">Gallery</string>
    <string name="app_slideshow">Slideshow</string>
    <string name="app_tools">Settings</string>
    <string name="app_communicate">Communicate</string>
    <string name="app_share">Share</string>
    <string name="app_send">Send</string>
    <string name="appmenuname">Global Mall Online</string>

    <string name="navdemo">Navigation Drawer Full Demo</string>
    <string name="gallery">This is GALLERY Activity</string>
    <string name="fileimport">This is FILE IMPORT Activity</string>
    <string name="slideshow">This is SLIDE SHOW Activity</string>

    <string name="action_settings">settings</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

</resources>
